--- a/pagina rock/rock.html
+++ b/pagina rock/rock.html
@@ -34,5 +34,17 @@
         <li>🎸 AC/DC</li>
         <li>🎸 Queen</li>
     </ul>
+    <div id="acessibilidade">
+        <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+        <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+    </div>
+    <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália"></section>
+    <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens"></section>
+
+    //Código omitido
+
+<script src="script.js"></script>
+
+//Código omitido
 </body>
 </html>
